app/home update

--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   
   <!-- Local CSS -->
-  <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
+  <!-- <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}"> -->
   <title>Sports Project</title>
 </head>
 
@@ -38,22 +38,7 @@
     </div>
     <div class="column image col-lg-12" style=""></div>
   </div> 
-  <nav class="navbar navbar-expand-lg navbar-custom">
-    <div class="container-fluid" style="margin:0rem 8rem;">
-      <a class="navbar-brand" href="{{ url_for('home') }}">Home</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link" href="{{ url_for('predictions') }}">WAITING FOR REVIEW</a>
-          <a class="nav-link" href="{{ url_for('analysis') }}">WAITING FOR REVIEW</a>
-          <a class="nav-link" href="{{ url_for('analysis') }}">WAITING FOR REVIEW</a>
-          <a class="nav-link" href="{{ url_for('future') }}">WAITING FOR REVIEW</a>
-        </div>
-      </div>
-    </div>
-  </nav>
+  
   <div>
     <div class="section" style="text-align: left; margin: 20px;">
       <h1>Game Prediction</h1>
@@ -168,7 +153,11 @@
     // Click Event on myButton
     document.getElementById('myButton').addEventListener('click', function() {
       // Call the endpoint using the fetch API
-      fetch("https://reqres.in/api/users?page=2")
+      const value1 = dropdown1.value;
+      const value2 = dropdown2.value;
+      let url = `data/${value1}/${value2}`  
+      const testAPI = async () =>{ 
+      await fetch(url)
       .then(response => {
           // Check if the response is OK
           if (!response.ok) {
@@ -178,24 +167,32 @@
       })
       .then(data => {
           // Handle the data returned from the endpoint
+          resultTest = data?.team_1
+          resultTest2 = data?.team_2
           console.log(data);
+          console.log(resultTest);
+          console.log(resultTest2);
           const resultDiv = document.getElementById("api-result");
           resultDiv.innerHTML = JSON.stringify(data)
-      })      
-      .catch(error => {
-          // Handle any errors that occurred during the fetch
-          console.error('There was a problem with the fetch operation:', error);
       })
-      .then(data => {
-    // Example: Assuming data is an array of items with `name` and `value` properties
-    const resultDiv = document.getElementById('result');
-    let content = '<ul>';
-    for (const item of data) {
-        content += `<li>${item.name}: ${item.value}</li>`;
-    }
-    content += '</ul>';
-    resultDiv.innerHTML = content;
+      .then(
+          () => {
+            // Perform your calculation based on the selected values
+            const calculatedResult = `${value1}: ${resultTest} | ${value2}: ${resultTest2}`;
+            console.log(calculatedResult)
+
+    //   .then(data => {
+    // // Example: Assuming data is an array of items with `name` and `value` properties
+    // const resultDiv = document.getElementById('result');
+    // let content = '<ul>';
+    // for (const item of data) {
+    //     content += `<li>${item.name}: ${item.value}</li>`;
+    // }
+    // content += '</ul>';
+    // resultDiv.innerHTML = content;
     });
+    testAPI()
+    }
   });
 </script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
