--- a/templates/home.html
+++ b/templates/home.html
@@ -149,9 +149,7 @@
         // Update the result textbox with the calculated value
         resultTextbox.value = calculatedResult;
     };
-
-    // Click Event on myButton
-    document.getElementById('myButton').addEventListener('click', function() {
+    function getResults() {
       // Call the endpoint using the fetch API
       const value1 = dropdown1.value;
       const value2 = dropdown2.value;
@@ -169,31 +167,32 @@
           // Handle the data returned from the endpoint
           resultTest = data?.team_1
           resultTest2 = data?.team_2
-          console.log(data);
-          console.log(resultTest);
-          console.log(resultTest2);
-          const resultDiv = document.getElementById("api-result");
-          resultDiv.innerHTML = JSON.stringify(data)
-      })
-      .then(
+          // console.log(data);
+          // console.log(resultTest);
+          // console.log(resultTest2);
+          // const resultDiv = document.getElementById("api-result");
+          // resultDiv.innerHTML = JSON.stringify(data)
+        })
+        .then(
           () => {
             // Perform your calculation based on the selected values
             const calculatedResult = `${value1}: ${resultTest} | ${value2}: ${resultTest2}`;
-            console.log(calculatedResult)
-
-    //   .then(data => {
-    // // Example: Assuming data is an array of items with `name` and `value` properties
-    // const resultDiv = document.getElementById('result');
-    // let content = '<ul>';
-    // for (const item of data) {
-    //     content += `<li>${item.name}: ${item.value}</li>`;
-    // }
-    // content += '</ul>';
-    // resultDiv.innerHTML = content;
-    });
-    testAPI()
-    }
-  });
+            resultTextbox.value = calculatedResult;
+            });
+          }
+          testAPI()
+      //   .then(data => {
+      // // Example: Assuming data is an array of items with `name` and `value` properties
+      // const resultDiv = document.getElementById('result');
+      // let content = '<ul>';
+      // for (const item of data) {
+      //     content += `<li>${item.name}: ${item.value}</li>`;
+      // }
+      // content += '</ul>';
+      // resultDiv.innerHTML = content;
+    // Click Event on myButton
+  }
+    document.getElementById('myButton').addEventListener('click',getResults)
 </script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
